Fix the select bar overlapping the navbar

--- a/src/components/selectBar/index.scss
+++ b/src/components/selectBar/index.scss
@@ -1,5 +1,6 @@
 .select_bar {
   width: 100%;
+  margin-top: 5rem;
 }
 .select_bar_container {
   display: flex;
